--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
+    "@underthebricks/utb-tokens": "^0.2.0",
     "chokidar-cli": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.26.5"
